Make code compatible with java 8